syntax = "proto3";

package consensus;

enum MessageType {
  UNKNOWN = 0;
  ANNOUNCE = 1;
  PREPARE = 2;
  PREPARED = 3;
  COMMIT = 4;
  COMMITTED = 5;
}

message Message {
  MessageType type = 1;
  uint32 consensus_id = 2;
  uint32 sender_id = 3; // TODO: make it public key
  bytes block_hash = 4;
  bytes payload = 5;
  bytes signature = 6;
}
